fix z-index bug

--- a/css/style.css
+++ b/css/style.css
@@ -8,16 +8,27 @@ html, body, header .container-fluid {
 	padding: 0;
 	font-family: 'Lato', sans-serif;
 	font-weight: 300;
+	font-size: 17px;
 	height: 100%;
 }
 
-hr { 
+hr.projects {
+	background-color: #a8a3a3;
+	border: 0;
+	height: 1px;
+}
+
+hr.special { 
   border: 0; 
   height: 1px; 
   background-image: -webkit-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -moz-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -ms-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0);
   background-image: -o-linear-gradient(left, #f0f0f0, #8c8b8b, #f0f0f0); 
+}
+
+.header_name {
+	left: 99999px;
 }
 
 #contact ul {
@@ -29,13 +40,14 @@ hr {
 	display: inline;
 }
 
-#projects {
-  background: linear-gradient(
-  rgba(0, 0, 0, 0.3),
-  rgba(0, 0, 0, 0.3)
-  ),
-  url(https://cloud.githubusercontent.com/assets/15892944/13803396/83259278-eb01-11e5-91e1-a3b12cf65b55.jpg) fixed no-repeat center center;
-  color: white;
+#project_feat {
+  background-color: #eee;
+  padding: 20px;
+}
+
+.project_image {
+	height: 300px;
+	padding: 10px;
 }
 
 .profile_pic {
@@ -44,6 +56,10 @@ hr {
 
 .btn {
 	border-radius: 0;
+}
+
+nav {
+	z-index: 9999;
 }
 
 .navbar {
@@ -56,7 +72,6 @@ hr {
 }
 
 .cover {
-	height: 100%;
 	background: 
 		linear-gradient(
 			rgba(0,0,0,0.5),
@@ -64,6 +79,7 @@ hr {
 		),url('../images/pc.jpg') top left no-repeat;
 	background-size: cover;
 	display: table;
+	height: 100%;
 	width: 100%;
 	padding: 0 20%;
 }
@@ -77,11 +93,6 @@ hr {
 
 .cover-text h1 {
 	font-size: 70px;
-}
-
-.cover .down .fa-chevron-down {
-	display: table-cell;
-	vertical-align: bottom;
 }
 
 .jumbotron {
